--- a/css/index.css
+++ b/css/index.css
@@ -88,4 +88,9 @@ div.zd-ekipa-img{
 #front, #back{
     max-width: 100%;
     max-height: 100%;
+
+    padding-top: 20px;
+    align-content: center;
+    display: table;
+    margin: 0px auto;
 }
