--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ div.zd-ekipa-img{
     max-width: 100%;
     max-height: 100%;
 }
-#front, #back{
+#front, #back, #xray_body{
     max-width: 100%;
     max-height: 100%;
 
