--- a/css/index.css
+++ b/css/index.css
@@ -85,25 +85,7 @@ div.zd-ekipa-img{
     max-width: 100%;
     max-height: 100%;
 }
-#front{
-    max-width: 100%;
-    max-height: 100%;
-
-    padding-top: 20px;
-    align-content: center;
-    display: table;
-    margin: 0px auto;
-}
-#back{
-    max-width: 100%;
-    max-height: 100%;
-
-    padding-top: 20px;
-    align-content: center;
-    display: table;
-    margin: 0px auto;
-}
-#xray_body{
+#front, #back, #xray_body{
     max-width: 100%;
     max-height: 100%;
 
