--- a/css/vitalni_znaki.css
+++ b/css/vitalni_znaki.css
@@ -91,19 +91,6 @@
 
 }
 
-.timeline > .timeline-inverted > .timeline-badge{
-    color: #fff;
-    width: 150px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 1.4em;
-    text-align: center;
-    position: absolute;
-    top: 16px;
-    margin-left: -120px;
-    background-color: #999999;
-    z-index: 100;
-}
 
 .timeline > li.timeline-inverted > .timeline-panel {
     float: right;
@@ -190,6 +177,21 @@
         border-right-width: 14px;
         left: -14px;
         right: auto;
+    }
+    .timeline > li > .timeline-badge {
+        color: #fff;
+        width: 150px;
+        height: 50px;
+        line-height: 50px;
+        font-size: 1.4em;
+        text-align: center;
+        position: absolute;
+        top: 16px;
+        left: 50%;
+        margin-left: -25px;
+        background-color: #999999;
+        z-index: 1;
+
     }
 }
 
