--- a/css/popups.css
+++ b/css/popups.css
@@ -30,7 +30,18 @@
     position: absolute;
     background: #d3d3d3;
     display: none;
-    height: 400px;
-    width: 700px;
     z-index: 100;
+}
+
+@media only screen and (max-width: 767px) {
+    #visibility-dodaj-vpis-vitalnih{
+        top: 120%;
+        left: 50%;
+        position: absolute;
+        background: #d3d3d3;
+        display: none;
+        z-index: 100;
+
+
+    }
 }
