--- a/css/vitalni_znaki.css
+++ b/css/vitalni_znaki.css
@@ -77,7 +77,7 @@
 
 .timeline > li > .timeline-badge {
     color: #fff;
-    width: 150px;
+    width: 50px;
     height: 50px;
     line-height: 50px;
     font-size: 1.4em;
@@ -88,6 +88,10 @@
     margin-left: -25px;
     background-color: #999999;
     z-index: 100;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
 
 }
 
@@ -180,7 +184,7 @@
     }
     .timeline > li > .timeline-badge {
         color: #fff;
-        width: 150px;
+        width: 50px;
         height: 50px;
         line-height: 50px;
         font-size: 1.4em;
