--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,19 @@
 @import url("http://fonts.googleapis.com/css?family=Vollkorn");
 
+#login-head-img{
+    max-width: 100%;
+    max-height: 100%;
+}
+#quote{
+    color: white;
+    font-size: small;
+    opacity: 0.3;
+    text-decoration: none;
+}
+#quote:hover{
+    color: white;
+    opacity: 1;
+}
 h4{
     font-size: 300%;
     font-family: 'Vollkorn', serif;
