--- a/css/vitalni_znaki.css
+++ b/css/vitalni_znaki.css
@@ -216,3 +216,8 @@
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
 }
+
+#graficni-pregled{
+    margin-left: 20px;
+    background: lightblue;
+}
