--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,14 @@ div.zd-ekipa-img{
     max-height: 100%;
     margin-bottom: 15px;
 }
+
+#indexPicture{
+    height: 200px;
+    width: 100%;
+}
+
+#indPc{
+    max-width:100%;
+    max-height:100%;
+
+}
